[feat] Make folder in current path become clickable & refresh the file list per directory (frontend)

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -8,6 +8,15 @@ body {
   margin: 10px 0;
 }
 
+#whole-path {
+  display: flex;
+  align-items: center;
+}
+
+.path-slash {
+  padding: 0 5px;
+}
+
 .folder {
  font-size: 18px; 
 }
