--- a/public/css/index.css
+++ b/public/css/index.css
@@ -3,10 +3,10 @@ body {
   font-size: 18px;
 }
 
-#current-path {
+/* #current-path {
   font-size: 22px;
   margin: 10px 0;
-}
+} */
 
 #whole-path {
   display: flex;
@@ -18,9 +18,35 @@ body {
 }
 
 .folder {
- font-size: 18px; 
+ font-size: 18px;
+ margin: 0 10px;
 }
 
 .file {
   font-size: 18px;
+  margin: 0 10px;
+}
+
+/* .file-list {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+} */
+
+#file-list-outer {
+  display: flex;
+}
+
+#file-list {
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+  width: 90%;
+}
+
+.file-div {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  margin: 10px 0;
 }
