[chore] change structure

--- a/views/history.ejs
+++ b/views/history.ejs
@@ -140,7 +140,7 @@
 
 
   <!-- <script src="/socket.io/socket.io.js"></script> -->
-  <script type="module" src="/newjs/history.js"></script>
+  <script type="module" src="/js/history.js"></script>
   <script>
     $(document).ready(function ()
     {
