--- a/views/home.html
+++ b/views/home.html
@@ -305,7 +305,7 @@
 
 
   <script src="/socket.io/socket.io.js"></script>
-  <script type="module" src="/newjs/home.js"></script>
+  <script type="module" src="/js/home.js"></script>
   <script>
     $(document).ready(function ()
     {
