--- a/views/view_folder.ejs
+++ b/views/view_folder.ejs
@@ -5,14 +5,38 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>EON Drive</title>
+  <!-- css  -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-
+  
+  <!-- script  -->
+  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.6.3.min.js"
+    integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+    crossorigin="anonymous"></script>
+  
   <!-- css internal -->
   <style>
-    div {
-      border: 1px dashed;
+    .ff-row:hover .individual-dl-btn {
+      display: block;
     }
+
+    .individual-dl-btn {
+      display: none;
+    }
+    .folder {
+      cursor: pointer;
+    }
+    .slash {
+      padding: 0 10px;
+      font-size: 24px;
+    }
+    /* div {
+      border: 1px dashed;
+    } */
+
     /* 
     .d-flex {
       border: 1px dashed;
@@ -42,56 +66,48 @@
 
     <!-- Main Body  -->
     <div class="container w-75">
-      <!-- Button & Info  -->
-      <div style="width: 100%; height: 50px;" class="d-flex align-items-center justify-content-between">
+      <div id="share-path" class="d-flex align-items-center py-2">
+        <a href="/view/fo/<%= shareToken %>">
+          <h3>
+            <span class="path-text">
+              <%= name %>
+            </span>
+          </h3>
+        </a>
+        
+      </div>
+      <!-- Button  -->
+      <div style="width: 100%; height: 50px;" 
+          class="d-flex align-items-center justify-content-between my-2">
         <div class="d-flex align-items-center">
-
-          <div class="me-3">
-            <button type="button" class="btn btn-outline-secondary">Download</button>
-          </div>
-        </div>
-
-        <div class="d-flex align-items-center">
-          <div class="me-2">
-            <button type="button" style="border: none; background-color: transparent;">
-              <svg xmlns="http://www.w3.org/2000/svg" height="27" fill="currentColor" class="bi bi-info-circle"
-                viewBox="0 0 16 16">
-                <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z" />
-                <path
-                  d="m8.93 6.588-2.29.287-.082.38.45.083c.294.07.352.176.288.469l-.738 3.468c-.194.897.105 1.319.808 1.319.545 0 1.178-.252 1.465-.598l.088-.416c-.2.176-.492.246-.686.246-.275 0-.375-.193-.304-.533L8.93 6.588zM9 4.5a1 1 0 1 1-2 0 1 1 0 0 1 2 0z" />
-              </svg>
+          <div>
+            <button type="button" class="btn btn-outline-secondary fo-dl-btn">
+              Download
             </button>
           </div>
         </div>
-
       </div>
-      <div >
-        <div class="col-9 d-flex flex-column align-items-start">
-
-          <!-- Table  -->
-          <div style="width: 100%;">
-            <table class="table" id="list-table">
-              <thead class="table-header">
-                <tr>
-                  <th><input type="checkbox" name="select_all" id="select-all"></th>
-                  <th>Name</th>
-                  <th>Modified</th>
-                </tr>
-              </thead>
-            </table>
-          </div>
+      <div>
+        <!-- Table  -->
+        <div style="width: 100%;">
+          <table class="table table-hover" id="fo-list-table">
+            <thead id="fo-list-thaed">
+              <tr>
+                <th scope="col">Name</th>
+                <th scope="col">Modified</th>
+              </tr>
+            </thead>
+            <tbody id="fo-list-tbody">
+            </tbody>
+          </table>
         </div>
-        <!-- sub right -->
-        <div class="col-3" id="info-block"></div>
       </div>
     </div>
   </div>
 
   </div>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
-    crossorigin="anonymous"></script>
 
+  <script type="module" src="/js/view_folder.js"></script>
 </body>
 
 </html>
