[fix] fix register url in frontend

--- a/views/login.html
+++ b/views/login.html
@@ -9,7 +9,7 @@
   <body>
     <div id="root">
       <div>
-        <a href="/register.html">Register</a>
+        <a href="/register">Register</a>
         <p></p>
       </div>
       <div>
