[feat] links and shared pages

--- a/views/links.html
+++ b/views/links.html
@@ -22,11 +22,17 @@
 
   <!-- css internal -->
   <style>
-    .form-check-input {
-      border-color: darkgray;
-      /* border-width: 1px; */
+    .user-email {
+      font-size:smaller;
+      color: rgb(86, 86, 86);
+    }
+    .you-shared-row:hover .revoke-btn {
+      display: block;
     }
 
+    .revoke-btn {
+      display: none;
+    }
     /* .d-flex {
       border: 1px dashed;
     } */
@@ -118,23 +124,25 @@
         <div class="col-11 d-flex flex-column align-items-start">
 
           <div class="d-flex align-items-center justify-content-md-between my-2" style="width: 100%;">
-
             <div>
               <h4>Your Links</h4>
             </div>
           </div>
 
           <!-- sub -->
-          <div class="col-12 d-flex flex-column align-items-start">
+          <div class="col-12 d-flex flex-column align-items-center mt-3">
             <!-- table  -->
             <div style="width: 100%;">
-              <table class="table" id="shared-table">
+              <table class="table table-hover" id="links-you-shared-table">
                 <thead class="table-header">
                   <tr>
-                    <th>Name</th>
-                    <th>Link</th>
+                    <th scope="col">File / Folder</th>
+                    <th scope="col">Link</th>
+                    <th scope="col">Access</th>
                   </tr>
                 </thead>
+                <tbody id="links-you-shared-tbody">
+                </tbody>
               </table>
             </div>
           </div>
@@ -147,7 +155,7 @@
 
 
   <!-- <script src="/socket.io/socket.io.js"></script> -->
-  <!-- <script type="module" src="/newjs/trash.js"></script> -->
+  <script type="module" src="/js/links.js"></script>
   <script>
     $(document).ready(function ()
     {
