--- a/views/home.html
+++ b/views/home.html
@@ -294,7 +294,50 @@
               </div>
             </div>
             <!-- Modal for get link end  -->
-
+            <!-- Modal for revoke link  -->
+            <div class="modal fade" id="revokeLinkModal" tabindex="-1" aria-labelledby="revokeLinkModalLabel"
+              aria-hidden="true">
+              <div class="modal-dialog">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <h5 class="modal-title" id="revokeLinkModalLabel">Revoke Share Link</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                  </div>
+                  <div class="modal-body">
+                    <div>Are you sure to revoke the link?</div>
+                  </div>
+                  <div class="modal-footer">
+                    <button type="button" class="btn btn-primary" id="revoke-link-btn">
+                      <!-- data-bs-toggle="modal" data-bs-target="#revokeAlertModal"> -->
+                      Yes
+                    </button>
+                    <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">
+                      No
+                    </button>
+                    
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- Modal for revoke link end  -->
+            <!-- Modal for revoke link alert  -->
+            <div class="modal fade" id="revokeAlertModal" tabindex="-1" aria-labelledby="revokeAlertModalLabel" aria-hidden="true">
+              <div class="modal-dialog">
+                <div class="modal-content">
+                  <!-- <div class="modal-header">
+                    <h5 class="modal-title" id="revokeAlertModalLabel">Modal title</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                  </div> -->
+                  <div class="modal-body my-3">
+                    Your link has been revoked.
+                  </div>
+                  <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary btn-sm" data-bs-dismiss="modal">Close</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- Modal for revoke link alert end -->
           </div>
         </div>
         <!-- main block end -->
