--- a/views/view_file.ejs
+++ b/views/view_file.ejs
@@ -7,66 +7,42 @@
   <title>
     <%= name %> - EON Drive
   </title>
-  <!-- css  -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-
-  <!-- script  -->
-  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-  <script src="https://code.jquery.com/jquery-3.6.3.min.js"
-    integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
-    crossorigin="anonymous"></script>
+  <%- include('./partials/view_stylesheet') %>
+    <%- include('./partials/view_script') %>
 </head>
 
 <body>
   <div id="root">
-
-    <div class="container w-75">
-      <header
-        class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
-        <div class="col-md-3 mb-2 mb-md-0">
-          <a href="/" class="d-inline-flex link-body-emphasis text-decoration-none">
-            <h1>EON Drive</h1>
-          </a>
-        </div>
-
-        <div class="col-md-3 text-end">
-          <button type="button" class="btn btn-dark me-4">Sign In</button>
-          <button type="button" class="btn btn-outline-dark">Sign Up</button>
-        </div>
-      </header>
-    </div>
-
-    <div class="container w-50">
-      <h2 class="file-name">
-        <%= name %>
-      </h2>
-      <div class="row" style="height: 100px;">
-        <div class="col-2 d-flex flex-column justify-items-center pt-5 ps-3">
-          <p>Size:</p>
-          <p>Modified:</p>
-          <p>Owner:</p>
-        </div>
-        <div class="col-4 d-flex flex-column justify-items-center pt-5 ps-3">
-          <p>
-            <%= Math.ceil(size/1024) %> KB
-          </p>
-          <p>
-            <%= new Date(updated_at).toLocaleString() %>
-          </p>
-          <p>
-            <%= owner %>
-          </p>
-        </div>
-        <div class="col-6 d-flex align-items-center">
-          <button type="button" class="btn btn-outline-dark fi-dl-btn">Download</button>
+    <%- include('./partials/view_header') %>
+      <!-- Main Body  -->
+      <div class="container w-50">
+        <h2 class="file-name">
+          <%= name %>
+        </h2>
+        <div class="row" style="height: 100px;">
+          <div class="col-2 d-flex flex-column justify-items-center pt-5 ps-3">
+            <p>Size:</p>
+            <p>Modified:</p>
+            <p>Owner:</p>
+          </div>
+          <div class="col-4 d-flex flex-column justify-items-center pt-5 ps-3">
+            <p>
+              <%= Math.ceil(size/1024) %> KB
+            </p>
+            <p>
+              <%= new Date(updated_at).toLocaleString() %>
+            </p>
+            <p>
+              <%= owner %>
+            </p>
+          </div>
+          <div class="col-6 d-flex align-items-center">
+            <button type="button" class="btn btn-outline-dark fi-dl-btn">Download</button>
+          </div>
         </div>
       </div>
-    </div>
-
   </div>
+
   <script type="module" src="/js/view_file.js"></script>
 </body>
 
