--- a/views/view_folder.ejs
+++ b/views/view_folder.ejs
@@ -5,106 +5,80 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>EON Drive</title>
-  <!-- css  -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-  
-  <!-- script  -->
-  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-  <script src="https://code.jquery.com/jquery-3.6.3.min.js"
-    integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
-    crossorigin="anonymous"></script>
-  
-  <!-- css internal -->
-  <style>
-    .ff-row:hover .individual-dl-btn {
-      display: block;
-    }
+  <%- include('./partials/view_stylesheet') %>
+    <%- include('./partials/view_script') %>
 
-    .individual-dl-btn {
-      display: none;
-    }
-    .folder {
-      cursor: pointer;
-    }
-    .slash {
-      padding: 0 10px;
-      font-size: 24px;
-    }
-    /* div {
-      border: 1px dashed;
-    } */
+      <!-- css internal -->
+      <style>
+        .ff-row:hover .individual-dl-btn {
+          display: block;
+        }
 
-    /* 
-    .d-flex {
-      border: 1px dashed;
-    } */
-  </style>
+        .individual-dl-btn {
+          display: none;
+        }
+
+        .folder {
+          cursor: pointer;
+        }
+
+        .slash {
+          padding: 0 10px;
+          font-size: 24px;
+        }
+
+        /* div {
+          border: 1px dashed;
+        } */
+
+            /* 
+        .d-flex {
+          border: 1px dashed;
+        } */
+      </style>
 </head>
 
 <body>
   <div id="root">
-
-    <div class="container w-75">
-      <!-- header  -->
-      <header
-        class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
-        <div class="col-md-3 mb-2 mb-md-0">
-          <a href="/" class="d-inline-flex link-body-emphasis text-decoration-none">
-            <h1>EON Drive</h1>
+    <%- include('./partials/view_header') %>
+      <!-- Main Body  -->
+      <div class="container w-75">
+        <div id="share-path" class="d-flex align-items-center py-2">
+          <a href="/view/fo/<%= shareToken %>">
+            <h3>
+              <span class="path-text">
+                <%= name %>
+              </span>
+            </h3>
           </a>
-        </div>
 
-        <div class="col-md-3 text-end">
-          <button type="button" class="btn btn-dark me-4">Sign In</button>
-          <button type="button" class="btn btn-outline-dark">Sign Up</button>
         </div>
-      </header>
-    </div>
-
-    <!-- Main Body  -->
-    <div class="container w-75">
-      <div id="share-path" class="d-flex align-items-center py-2">
-        <a href="/view/fo/<%= shareToken %>">
-          <h3>
-            <span class="path-text">
-              <%= name %>
-            </span>
-          </h3>
-        </a>
-        
-      </div>
-      <!-- Button  -->
-      <div style="width: 100%; height: 50px;" 
-          class="d-flex align-items-center justify-content-between my-2">
-        <div class="d-flex align-items-center">
-          <div>
-            <button type="button" class="btn btn-outline-secondary fo-dl-btn">
-              Download
-            </button>
+        <!-- Button  -->
+        <div style="width: 100%; height: 50px;" class="d-flex align-items-center justify-content-between my-2">
+          <div class="d-flex align-items-center">
+            <div>
+              <button type="button" class="btn btn-outline-secondary fo-dl-btn">
+                Download
+              </button>
+            </div>
+          </div>
+        </div>
+        <div>
+          <!-- Table  -->
+          <div style="width: 100%;">
+            <table class="table table-hover" id="fo-list-table">
+              <thead id="fo-list-thaed">
+                <tr>
+                  <th scope="col">Name</th>
+                  <th scope="col">Modified</th>
+                </tr>
+              </thead>
+              <tbody id="fo-list-tbody">
+              </tbody>
+            </table>
           </div>
         </div>
       </div>
-      <div>
-        <!-- Table  -->
-        <div style="width: 100%;">
-          <table class="table table-hover" id="fo-list-table">
-            <thead id="fo-list-thaed">
-              <tr>
-                <th scope="col">Name</th>
-                <th scope="col">Modified</th>
-              </tr>
-            </thead>
-            <tbody id="fo-list-tbody">
-            </tbody>
-          </table>
-        </div>
-      </div>
-    </div>
-  </div>
-
   </div>
 
   <script type="module" src="/js/view_folder.js"></script>
