[feat] adjust get link user flow - show people has access in get link modal

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -279,10 +279,15 @@
                     </div>
                     <div class="selected-emails mb-3"></div>
                   </form>
+                  <hr class="my-3" >
+                  <div>
+                    <div>People with access: </div>
+                    <div id="current-access-list"></div>
+                  </div>
                 </div>
-                <div class="modal-footer">
-                  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" id="create-link-cancel-btn">Cancel</button>
-                  <button type="button" class="btn btn-primary" id="create-link-btn">Create Link</button>
+                <div class="modal-footer flex-nowrap p-0">
+                  <button type="button" class="btn btn-lg btn-link fs-6 text-decoration-none col-6 m-0 rounded-0 border-end" id="create-link-btn"><strong>Create Link</strong></button>
+                  <button type="button" class="btn btn-lg btn-link fs-6 text-decoration-none col-6 m-0 rounded-0" data-bs-dismiss="modal" id="create-link-cancel-btn">Cancel</button>
                 </div>
               </div>
             </div>
