[feat] beauty web pages

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link href="img/favicon.ico" rel="shortcut icon"/>
   <title>EON Drive</title>
   <%- include('./partials/stylesheet') %>
   <%- include('./partials/script') %>
@@ -40,7 +41,8 @@
     }
 
     .slash {
-      padding: 0 6px;
+      padding: 0 6px 3px;
+      font-size: larger;
     }
 
     .form-check-input {
