--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -31,10 +31,13 @@
             <!-- d-none: hide the badge  -->
           </span>
         </button>
-        <ul class="dropdown-menu dropdown-menu-end dropdown-menu-start" 
+        <!-- <ul class="dropdown-menu dropdown-menu-end dropdown-menu-start" 
             aria-labelledby="dropdownMenuNoti" id="noti-ul">
           <li><div class="dropdown-item" id="no-noti">No Notification</div></li>
-        </ul>
+        </ul> -->
+        <div class="dropdown-menu dropdown-menu-end dropdown-menu-start" aria-labelledby="dropdownMenuNoti" id="noti-ul">
+          <div class="dropdown-item" id="no-noti">No Notification</div>
+        </div>
       </div>
       <!-- user icon  -->
       <div class="dropdown">
