--- a/views/partials/main_footer.ejs
+++ b/views/partials/main_footer.ejs
@@ -3,6 +3,13 @@
     background-color: white;
     color: rgb(141, 141, 141);
   }
+  .footer-block {
+    position: fixed;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: white;
+  }
 
   .footer-block a {
     color: rgb(141, 141, 141);
@@ -18,7 +25,7 @@
     padding: 1vh 0;
   }
 </style>
-<div class="container w-75 footer-block">
+<div class="container w-100 footer-block">
   <footer class="d-flex flex-wrap justify-content-between align-items-center">
     <ul class="nav justify-content-end">
       <li class="nav-item"><a href="#" class="nav-link px-2">Terms and Conditions</a></li>
