--- a/views/partials/view_header.ejs
+++ b/views/partials/view_header.ejs
@@ -8,7 +8,7 @@
     border: 1px dashed;
   } */
 
-  img {
+  .header-logo {
     height: 11vh;
     max-height: 100%;
     width: auto;
@@ -51,7 +51,7 @@
   <header class="d-flex flex-wrap align-items-stretch justify-content-md-between border-bottom">
     <div class="col-md-3 mb-2 mb-md-0">
       <a href="/" class="d-inline-flex link-body-emphasis text-decoration-none">
-        <img src="/img/header-logo.jpg">
+        <img class="header-logo" src="/img/header-logo.jpg">
       </a>
     </div>
     <div class="col-md-2 d-flex justify-content-end align-items-end">
