--- a/views/view/index.ejs
+++ b/views/view/index.ejs
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Lato' type='text/css'>
-  <link href="img/favicon.ico" rel="shortcut icon" />
+  <link href="/img/favicon.ico" rel="shortcut icon" />
   <title>EON Drive</title>
   <style>
     * {
@@ -92,7 +92,7 @@
   <div id="root">
     <div id="main-block">
       <div id="img-block">
-        <img src="img/index-2.png">
+        <img src="/img/index-2.png">
       </div>
       <div id="title-block">
         <h1 id="title">EON Drive</h1>
@@ -101,43 +101,6 @@
         </div>
       </div>
     </div>
-    <!-- <style>
-      footer {
-        position: fixed;
-        bottom: 0;
-        height: 50px;
-        width: 100%;
-        background-color: #333;
-        color: #fff;
-        text-align: center;
-        line-height: 50px;
-      }
-      #copy {
-        color: #fff;
-      }
-      ul {
-        list-style: none;
-        margin: 0;
-        padding: 0;
-      }
-
-      li {
-        display: inline-block;
-        margin-right: 20px;
-      }
-
-      .footer-a {
-        color: #000;
-        text-decoration: none;
-      }
-    </style> -->
-    <!-- <footer>
-      <div id="copy"> &copy; 2023 Eon Drive </div>
-      <ul>
-        <li><a class="footer-a" href="/about">About</a></li>
-        <li><a class="footer-a" href="/privacy-policy">Privacy Policy</a></li>
-      </ul>
-    </footer> -->
 </body>
 
 </html>
