--- a/views/view/register.ejs
+++ b/views/view/register.ejs
@@ -5,11 +5,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>EON Drive - Register</title>
-  <%- include('./partials/view_stylesheet') %>
-    <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Lato' type='text/css'>
-
-    <%- include('./partials/view_script') %>
-      <link href="img/favicon.ico" rel="shortcut icon" />
+  <%- include('../partials/view_stylesheet') %>
+    <%- include('../partials/view_script') %>
       <style>
         * {
           font-family: 'Lato', sans-serif !important;
@@ -208,7 +205,7 @@
     </div>
     <!-- footer  -->
     <div class="container w-75 footer-block">
-      <footer class="d-flex flex-wrap justify-content-between align-items-center border-top">
+      <footer class="d-flex flex-wrap justify-content-between align-items-center">
         <ul class="nav justify-content-end">
           <li class="nav-item"><a href="#" class="nav-link px-2">Terms and Conditions</a></li>
           <li class="nav-item"><a href="#" class="nav-link px-2">Privacy Policy</a></li>
@@ -221,6 +218,6 @@
     </div>
 
 </body>
-<script type="module" src="/js/register.js"></script>
+<script type="module" src="/js/pages/view/register.js"></script>
 
 </html>
