--- a/views/main/history.ejs
+++ b/views/main/history.ejs
@@ -5,15 +5,16 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Version History - EON Drive</title>
-  <%- include('./partials/stylesheet') %>
-  <%- include('./partials/script') %>
-
+  <%- include('../partials/main_stylesheet') %>
+  <%- include('../partials/main_script') %>
   <!-- css internal -->
   <style>
+    /* .d-flex {
+      border: 1px dashed;
+    } */
     .rec:hover .restore-btn {
       display: block;
     }
-
     .restore-btn {
       display: none;
     }
@@ -21,20 +22,17 @@
       opacity: 0.5;
       cursor: not-allowed;
     }
-    /* .d-flex {
-      border: 1px dashed;
-    } */
   </style>
 </head>
 
 <body>
   <div id="root">
-    <%- include('./partials/header') %>
+    <%- include('../partials/main_header') %>
     <!-- main block start -->
-    <div class="container">
+    <div class="container content-block">
       <div class="row">
         <!-- left  -->
-        <%- include('./partials/left') %>
+        <%- include('../partials/main_left') %>
         <!-- right  -->
         <div class="col-11 d-flex flex-column align-items-start">
           <div class="d-flex align-items-center pb-3" >
@@ -50,10 +48,12 @@
       </div>
       <!-- main block end -->
     </div>
+    <%- include('../partials/main_footer') %>
   </div>
 
   <script src="/socket.io/socket.io.js"></script>
-  <script type="module" src="/js/history.js"></script>
+  <script type="module" src="/js/pages/main/header.js"></script>
+  <script type="module" src="/js/pages/main/history.js"></script>
   <script>
     $(document).ready(function ()
     {
