--- a/views/main/links.ejs
+++ b/views/main/links.ejs
@@ -5,10 +5,13 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Links - EON Drive</title>
-  <%- include('./partials/stylesheet') %>
-  <%- include('./partials/script') %>
+  <%- include('../partials/main_stylesheet') %>
+  <%- include('../partials/main_script') %>
   <!-- css internal -->
   <style>
+    /* .d-flex {
+      border: 1px dashed;
+    } */
     .user-email {
       font-size:smaller;
       color: rgb(86, 86, 86);
@@ -16,24 +19,20 @@
     .you-shared-row:hover .revoke-btn {
       display: block;
     }
-
     .revoke-btn {
       display: none;
     }
-    /* .d-flex {
-      border: 1px dashed;
-    } */
   </style>
 </head>
 
 <body>
   <div id="root">
-    <%- include('./partials/header') %>
+    <%- include('../partials/main_header') %>
     <!-- main block start -->
-    <div class="container">
+    <div class="container content-block">
       <div class="row">
         <!-- left  -->
-        <%- include('./partials/left') %>
+        <%- include('../partials/main_left') %>
         <!-- right  -->
         <div class="col-11 d-flex flex-column align-items-start">
 
@@ -63,11 +62,12 @@
       </div>
       <!-- main block end -->
     </div>
+    <%- include('../partials/main_footer') %>
   </div>
 
   <script src="/socket.io/socket.io.js"></script>
-  <script type="module" src="/js/header.js"></script>
-  <script type="module" src="/js/links.js"></script>
+  <script type="module" src="/js/pages/main/header.js"></script>
+  <script type="module" src="/js/pages/main/links.js"></script>
   <script>
     $(document).ready(function ()
     {
