--- a/views/partials/main_left.ejs
+++ b/views/partials/main_left.ejs
@@ -1,18 +1,25 @@
+<style>
+  .left-svg {
+    width: 6vh;
+    max-width: 100%;
+    height: auto;
+  }
+</style>
 <div class="col-1 d-flex flex-column position-fixed">
   <a href="/home" class="mx-1 my-3 d-inline-flex link-body-emphasis text-decoration-none">
-    <svg xmlns="http://www.w3.org/2000/svg" width="40" fill="currentColor" class="bi bi-folder" viewBox="0 0 16 16">
+    <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="left-svg bi bi-folder" viewBox="0 0 16 16">
       <path
         d="M.54 3.87.5 3a2 2 0 0 1 2-2h3.672a2 2 0 0 1 1.414.586l.828.828A2 2 0 0 0 9.828 3h3.982a2 2 0 0 1 1.992 2.181l-.637 7A2 2 0 0 1 13.174 14H2.826a2 2 0 0 1-1.991-1.819l-.637-7a1.99 1.99 0 0 1 .342-1.31zM2.19 4a1 1 0 0 0-.996 1.09l.637 7a1 1 0 0 0 .995.91h10.348a1 1 0 0 0 .995-.91l.637-7A1 1 0 0 0 13.81 4H2.19zm4.69-1.707A1 1 0 0 0 6.172 2H2.5a1 1 0 0 0-1 .981l.006.139C1.72 3.042 1.95 3 2.19 3h5.396l-.707-.707z" />
     </svg>
   </a>
   <a href="/shared" class="mx-1 my-3 d-inline-flex link-body-emphasis text-decoration-none">
-    <svg xmlns="http://www.w3.org/2000/svg" width="40" fill="currentColor" class="bi bi-people" viewBox="0 0 16 16">
+    <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="left-svg bi bi-people" viewBox="0 0 16 16">
       <path
         d="M15 14s1 0 1-1-1-4-5-4-5 3-5 4 1 1 1 1h8Zm-7.978-1A.261.261 0 0 1 7 12.996c.001-.264.167-1.03.76-1.72C8.312 10.629 9.282 10 11 10c1.717 0 2.687.63 3.24 1.276.593.69.758 1.457.76 1.72l-.008.002a.274.274 0 0 1-.014.002H7.022ZM11 7a2 2 0 1 0 0-4 2 2 0 0 0 0 4Zm3-2a3 3 0 1 1-6 0 3 3 0 0 1 6 0ZM6.936 9.28a5.88 5.88 0 0 0-1.23-.247A7.35 7.35 0 0 0 5 9c-4 0-5 3-5 4 0 .667.333 1 1 1h4.216A2.238 2.238 0 0 1 5 13c0-1.01.377-2.042 1.09-2.904.243-.294.526-.569.846-.816ZM4.92 10A5.493 5.493 0 0 0 4 13H1c0-.26.164-1.03.76-1.724.545-.636 1.492-1.256 3.16-1.275ZM1.5 5.5a3 3 0 1 1 6 0 3 3 0 0 1-6 0Zm3-2a2 2 0 1 0 0 4 2 2 0 0 0 0-4Z" />
     </svg>
   </a>
   <a href="/links" class="mx-1 my-3 d-inline-flex link-body-emphasis text-decoration-none">
-    <svg xmlns="http://www.w3.org/2000/svg" width="40" fill="currentColor" class="bi bi-link-45deg" viewBox="0 0 16 16">
+    <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="left-svg bi bi-link-45deg" viewBox="0 0 16 16">
       <path
         d="M4.715 6.542 3.343 7.914a3 3 0 1 0 4.243 4.243l1.828-1.829A3 3 0 0 0 8.586 5.5L8 6.086a1.002 1.002 0 0 0-.154.199 2 2 0 0 1 .861 3.337L6.88 11.45a2 2 0 1 1-2.83-2.83l.793-.792a4.018 4.018 0 0 1-.128-1.287z" />
       <path
@@ -20,7 +27,7 @@
     </svg>
   </a>
   <a href="/trash" class="mx-1 my-3 d-inline-flex link-body-emphasis text-decoration-none">
-    <svg xmlns="http://www.w3.org/2000/svg" width="40" fill="currentColor" class="bi bi-trash" viewBox="0 0 16 16">
+    <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="left-svg bi bi-trash" viewBox="0 0 16 16">
       <path
         d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5Zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5Zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6Z" />
       <path
