--- a/views/view/view_file.ejs
+++ b/views/view/view_file.ejs
@@ -7,10 +7,8 @@
   <title>
     <%= name %> - EON Drive
   </title>
-  <%- include('./partials/view_stylesheet') %>
-  <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Lato' type='text/css'>
-
-    <%- include('./partials/view_script') %>
+  <%- include('../partials/view_stylesheet') %>
+  <%- include('../partials/view_script') %>
   <style>
     div {
       /* border: 1px dashed; */
@@ -30,7 +28,7 @@
 
 <body>
   <div id="root">
-    <%- include('./partials/view_header') %>
+    <%- include('../partials/view_header') %>
       <!-- Main Body  -->
       <div class="container content-block d-flex justify-content-center">
         <div class="content">
@@ -61,10 +59,10 @@
         </div>
       </div>
       </div>
-    <%- include('./partials/view_footer') %>
+    <%- include('../partials/view_footer') %>
   </div>
 
-  <script type="module" src="/js/view_file.js"></script>
+  <script type="module" src="/js/pages/view/view_file.js"></script>
 </body>
 
 </html>
