--- a/views/view/view_folder.ejs
+++ b/views/view/view_folder.ejs
@@ -5,10 +5,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>EON Drive</title>
-  <%- include('./partials/view_stylesheet') %>
-  <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Lato' type='text/css'>
-
-    <%- include('./partials/view_script') %>
+  <%- include('../partials/view_stylesheet') %>
+    <%- include('../partials/view_script') %>
 
       <!-- css internal -->
       <style>
@@ -19,6 +17,7 @@
           transform: translateX(-50%);
           background-color: white;
         }
+
         .ff-row:hover .individual-dl-btn {
           display: block;
         }
@@ -36,11 +35,15 @@
           font-size: 24px;
         }
 
+        .content-block {
+          width: 68vw;
+        }
+
         /* div {
           border: 1px dashed;
         } */
 
-            /* 
+        /* 
         .d-flex {
           border: 1px dashed;
         } */
@@ -49,9 +52,9 @@
 
 <body>
   <div id="root">
-    <%- include('./partials/view_header') %>
+    <%- include('../partials/view_header') %>
       <!-- Main Body  -->
-      <div class="container w-75 content-block">
+      <div class="container content-block">
         <div id="share-path" class="d-flex align-items-center py-2">
           <a href="/view/fo/<%= shareToken %>">
             <h3>
@@ -88,10 +91,10 @@
           </div>
         </div>
       </div>
-      <%- include('./partials/view_footer') %>
+      <%- include('../partials/view_footer') %>
   </div>
 
-  <script type="module" src="/js/view_folder.js"></script>
+  <script type="module" src="/js/pages/view/view_folder.js"></script>
 </body>
 
 </html>
