--- a/views/main/links.ejs
+++ b/views/main/links.ejs
@@ -6,63 +6,110 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Links - EON Drive</title>
   <%- include('../partials/main_stylesheet') %>
-  <%- include('../partials/main_script') %>
-  <!-- css internal -->
-  <style>
-    /* .d-flex {
+    <%- include('../partials/main_script') %>
+      <!-- css internal -->
+      <style>
+        /* .d-flex {
       border: 1px dashed;
     } */
-    .user-email {
-      font-size:smaller;
-      color: rgb(86, 86, 86);
-    }
-    .you-shared-row:hover .revoke-btn {
-      display: block;
-    }
-    .revoke-btn {
-      display: none;
-    }
-  </style>
+        .user-email {
+          font-size: smaller;
+          color: rgb(86, 86, 86);
+        }
+
+        .you-shared-row:hover .revoke-btn {
+          display: block;
+        }
+
+        .revoke-btn {
+          display: none;
+        }
+      </style>
 </head>
 
 <body>
   <div id="root">
     <%- include('../partials/main_header') %>
-    <!-- main block start -->
-    <div class="container content-block">
-      <div class="row">
-        <!-- left  -->
-        <%- include('../partials/main_left') %>
-        <!-- right  -->
-        <div class="col-11 d-flex flex-column align-items-start">
+      <!-- main block start -->
+      <div class="container content-block">
+        <div class="row">
+          <!-- left  -->
+          <%- include('../partials/main_left') %>
+            <!-- right  -->
+            <div class="col-11 d-flex flex-column align-items-start">
 
-          <div class="d-flex align-items-center justify-content-md-between my-2" style="width: 100%;">
-            <div>
-              <h4>Your Links</h4>
+              <div class="d-flex align-items-center justify-content-md-between my-2" style="width: 100%;">
+                <div>
+                  <h4>Your Links</h4>
+                </div>
+              </div>
+
+              <div class="col-12 d-flex flex-column align-items-center mt-3">
+                <!-- table  -->
+                <div style="width: 100%;">
+                  <table class="table table-hover" id="links-you-shared-table">
+                    <thead class="table-header">
+                      <tr>
+                        <th scope="col">File / Folder</th>
+                        <th scope="col">Link</th>
+                        <th scope="col">Access</th>
+                      </tr>
+                    </thead>
+                    <tbody id="links-you-shared-tbody">
+                    </tbody>
+                  </table>
+                </div>
+              </div>
             </div>
-          </div>
+        </div>
+        <!-- Modal for revoke link  -->
+        <div class="modal fade" id="revokeLinkModal" tabindex="-1" aria-labelledby="revokeLinkModalLabel"
+          aria-hidden="true">
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="revokeLinkModalLabel">Revoke Share Link</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+              </div>
+              <div class="modal-body">
+                <div>Are you sure to revoke the link?</div>
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-primary" id="revoke-link-btn">
+                  <!-- data-bs-toggle="modal" data-bs-target="#revokeAlertModal"> -->
+                  Yes
+                </button>
+                <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">
+                  No
+                </button>
 
-          <div class="col-12 d-flex flex-column align-items-center mt-3">
-            <!-- table  -->
-            <div style="width: 100%;">
-              <table class="table table-hover" id="links-you-shared-table">
-                <thead class="table-header">
-                  <tr>
-                    <th scope="col">File / Folder</th>
-                    <th scope="col">Link</th>
-                    <th scope="col">Access</th>
-                  </tr>
-                </thead>
-                <tbody id="links-you-shared-tbody">
-                </tbody>
-              </table>
+              </div>
             </div>
           </div>
         </div>
+        <!-- Modal for revoke link end  -->
+        <!-- Modal for revoke link alert  -->
+        <div class="modal fade" id="revokeAlertModal" tabindex="-1" aria-labelledby="revokeAlertModalLabel"
+          aria-hidden="true">
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <!-- <div class="modal-header">
+                    <h5 class="modal-title" id="revokeAlertModalLabel">Modal title</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                  </div> -->
+              <div class="modal-body my-3">
+                Your link has been revoked.
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-secondary btn-sm" data-bs-dismiss="modal">Close</button>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- Modal for revoke link alert end -->
+        <!-- main block end -->
       </div>
-      <!-- main block end -->
-    </div>
-    <%- include('../partials/main_footer') %>
+      <%- include('../partials/main_footer') %>
   </div>
 
   <script src="/socket.io/socket.io.js"></script>
