[chore] change file name

--- a/views/view/index.ejs
+++ b/views/view/index.ejs
@@ -92,7 +92,7 @@
   <div id="root">
     <div id="main-block">
       <div id="img-block">
-        <img src="/img/index-2.png">
+        <img src="/img/index.png">
       </div>
       <div id="title-block">
         <h1 id="title">EON Drive</h1>
