--- a/views/partials/view_footer.ejs
+++ b/views/partials/view_footer.ejs
@@ -21,8 +21,8 @@
 <div class="container w-75 footer-block">
   <footer class="d-flex flex-wrap justify-content-between align-items-center">
     <ul class="nav justify-content-end">
-      <li class="nav-item"><a href="#" class="nav-link px-2">Terms and Conditions</a></li>
-      <li class="nav-item"><a href="#" class="nav-link px-2">Privacy Policy</a></li>
+      <li class="nav-item"><a href="/info#terms" class="nav-link px-2">Terms and Conditions</a></li>
+      <li class="nav-item"><a href="/info#privacy" class="nav-link px-2">Privacy Policy</a></li>
       <li class="nav-item"><a href="#" class="nav-link px-2">Contact</a></li>
     </ul>
     <div class="d-flex align-items-center">
